# Project-Coruscant

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_advanced_settings.py  test_factory.py  test_generate_trip.py  test_llm_prompts.py
wanderwise/: __init__.py  advanced_settings.py  calendar.py  generate_itinerary.py  generate_trip.py
wanderwise/llm_data_structures/: day_schedule.py  itinerary.py  timeblock.py
wanderwise/llm_prompts/: base.py  itinerary_prompt.py  system_instructions.py
wanderwise/static/: toggle_advanced_settings.js
wanderwise/templates/: base.html  index.html
wanderwise/templates/advanced_settings/: advanced_settings.html
wanderwise/templates/calendar/: index.html
wanderwise/templates/generate_trip/: index.html
