[tool.poetry]
name = "wanderwise"
version = "0.0.1"
description = "An AI-powered trip planner built with Flask."
authors = ["Phillip Lagoc"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
markdown = "^3.6"
langchain-openai = "^0.1.15"
langchain = "^0.2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
